--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -1,8 +1,5 @@
 <template name="HomeLayout">
-    <header>
-      <h1>Library</h1>
-    </header>
-    {{> loginButtons}}
+    {{> Header}}
     <main>
       <div class="billboard">
         <h2>Lam gi do di</h2>
