Xu ly xong Roles va hien thi Users

--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -2,7 +2,7 @@
     {{> Header}}
     <main>
       <div class="billboard">
-        <h2>Lam gi do di</h2>
+        <h2>Library Management - Lung Vang Test</h2>
       </div>
     </main>
 </template>
