--- a/client/main.styl
+++ b/client/main.styl
@@ -92,11 +92,12 @@ header
         margin 0
         font-size 1.6em
         float left
-    .login-buttons-dropdown-align-
-        float right
-        a
-            color #FFF
-            text-decoration none
+    ul
+        float: right
+        margin-top: 4px
+        list-style: none
+        li
+            cursor: pointer
 
 p
     color #333
@@ -126,7 +127,7 @@ p
         margin-top 40px
         padding-left $side-nav-large
 
-.new-book
+.new-btn
     margin-bottom 20px
 
 .new-book-container
