--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -3,6 +3,7 @@
     <main>
       <div class="billboard">
         <h2>Library Management - Lung Vang Test</h2>
+        <h3>Người thực hiện: Chu Văn Đạt</h3>
       </div>
     </main>
 </template>
