--- a/style/user.styl
+++ b/style/user.styl
@@ -26,3 +26,13 @@ table
 .user_id
     cursor pointer
     color blue
+
+.toggle-admin
+    background-color teal
+    border none
+.delete-user
+    background-color red
+    border none
+.edit-user
+    background-color blue
+    border none
